cleaning and restructuring the code

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>wer-sitzt-wo</name>
     <description>wer-sitzt-wo</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -70,6 +70,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <skip>true</skip>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
