--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/wer_sitzt_wo_db
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=${DLL_AUTO}
+spring.datasource.url=${MYSQL_DB_HOST}
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
+spring.datasource.driver-class-name=${DRIVER_CLASS_NAME}
+spring.jooq.sql-dialect=${SQL_DIALECT}
 
